--- a/BaiduAIOpen/BaiduAIOpen.csproj
+++ b/BaiduAIOpen/BaiduAIOpen.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Baidu.AI.Ocr" Version="1.0.3" />
+  </ItemGroup>
+
 
 </Project>
