--- a/WrittenWords/Baidu.AI.Ocr.csproj
+++ b/WrittenWords/Baidu.AI.Ocr.csproj
@@ -7,7 +7,8 @@
     <Description>二次封装百度Ocr Sdk</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>yulongjiang</Authors>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
+    <PackageReleaseNotes>更新高精度识别入参和出参 更改为C#实体</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
