--- a/Ocr/Baidu.AI.Ocr.csproj
+++ b/Ocr/Baidu.AI.Ocr.csproj
@@ -4,10 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Baidu.AI.Ocr</AssemblyName>
     <RootNamespace>Baidu.AI.Ocr</RootNamespace>
-    <Description>二次封装百度Ocr Sdk</Description>
+    <Description>二次封装百度Ocr Sdk
+优化身份证和驾驶证识别方法出参入参</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>yulongjiang</Authors>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
     <PackageReleaseNotes>更新高精度识别入参和出参 更改为C#实体</PackageReleaseNotes>
   </PropertyGroup>
 
