--- a/NUnitTestProject1/NUnitTestProject1.csproj
+++ b/NUnitTestProject1/NUnitTestProject1.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WrittenWords\Baidu.AI.Ocr.csproj" />
+    <ProjectReference Include="..\Ocr\Baidu.AI.Ocr.csproj" />
   </ItemGroup>
 
 </Project>
