--- a/Ocr/Baidu.AI.Ocr.csproj
+++ b/Ocr/Baidu.AI.Ocr.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Baidu.AI" Version="3.6.14" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
